--- a/src/main/resources/fxml/connection.fxml
+++ b/src/main/resources/fxml/connection.fxml
@@ -17,11 +17,11 @@
             <Font name="Inconsolata" size="23.0" />
          </font>
       </Text>
-      <TextField fx:id="ip" layoutX="555.0" layoutY="227.0" prefHeight="24.0" prefWidth="234.0" promptText="IP address" />
+      <TextField fx:id="ip" layoutX="555.0" layoutY="227.0" prefHeight="24.0" prefWidth="276.0" promptText="IP address" />
       <Text layoutX="555.0" layoutY="212.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Insert the server IP address:" />
       <Text layoutX="555.0" layoutY="275.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Insert the server port:" />
-      <TextField fx:id="port" layoutX="555.0" layoutY="290.0" prefHeight="24.0" prefWidth="234.0" promptText="Port number" />
-      <Button layoutX="591.0" layoutY="334.0" mnemonicParsing="false" onAction="#connect" prefHeight="39.0" prefWidth="162.0" text="Connect" />
-      <Text fx:id="errorMessage" fill="RED" layoutX="555.0" layoutY="401.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" visible="false" />
+      <TextField fx:id="port" layoutX="555.0" layoutY="290.0" prefHeight="24.0" prefWidth="276.0" promptText="Port number" />
+      <Button layoutX="612.0" layoutY="335.0" mnemonicParsing="false" onAction="#connect" prefHeight="39.0" prefWidth="162.0" text="Connect" />
+      <Text fx:id="errorMessage" fill="RED" layoutX="555.0" layoutY="404.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" visible="false" wrappingWidth="276.0" />
    </children>
 </AnchorPane>
