--- a/src/main/resources/fxml/connection.fxml
+++ b/src/main/resources/fxml/connection.fxml
@@ -21,7 +21,7 @@
       <Text layoutX="555.0" layoutY="212.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Insert the server IP address:" />
       <Text layoutX="555.0" layoutY="275.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Insert the server port:" />
       <TextField fx:id="port" layoutX="555.0" layoutY="290.0" prefHeight="24.0" prefWidth="276.0" promptText="Port number" />
-      <Button layoutX="612.0" layoutY="335.0" mnemonicParsing="false" onAction="#connect" prefHeight="39.0" prefWidth="162.0" text="Connect" />
+      <Button defaultButton="true" layoutX="612.0" layoutY="335.0" mnemonicParsing="false" onAction="#connect" prefHeight="39.0" prefWidth="162.0" text="Connect" />
       <Text fx:id="errorMessage" fill="RED" layoutX="555.0" layoutY="404.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" visible="false" wrappingWidth="276.0" />
    </children>
 </AnchorPane>
