--- a/src/main/resources/fxml/lobby.fxml
+++ b/src/main/resources/fxml/lobby.fxml
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="it.polimi.ingsw.client.gui.controllers.initial.LobbyController"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="540.0" prefWidth="860.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.gui.controllers.initial.LobbyController">
+   <children>
+      <TableView fx:id="games" layoutX="69.0" layoutY="44.0" prefHeight="452.0" prefWidth="449.0">
+        <columns>
+          <TableColumn fx:id="gameID" editable="false" prefWidth="75.0" sortable="false" text="GameID" />
+          <TableColumn fx:id="players" editable="false" prefWidth="75.0" sortable="false" text="Players" />
+          <TableColumn fx:id="expertMode" editable="false" prefWidth="75.0" sortable="false" text="Expert mode" />
+        </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+      </TableView>
+      <Button fx:id="refresh" layoutX="571.0" layoutY="69.0" mnemonicParsing="false" onAction="#requestGames" prefHeight="35.0" prefWidth="223.0" text="Refresh list" />
+      <Button fx:id="join" layoutX="571.0" layoutY="127.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="223.0" text="Join game" />
+      <Button fx:id="create" layoutX="571.0" layoutY="186.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="223.0" text="Create game" />
+   </children>
 </AnchorPane>
