--- a/src/main/resources/fxml/lobby.fxml
+++ b/src/main/resources/fxml/lobby.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
 <AnchorPane prefHeight="540.0" prefWidth="860.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.gui.controllers.initial.LobbyController">
    <children>
@@ -16,7 +17,8 @@
          </columnResizePolicy>
       </TableView>
       <Button fx:id="refresh" layoutX="571.0" layoutY="69.0" mnemonicParsing="false" onAction="#requestGames" prefHeight="35.0" prefWidth="223.0" text="Refresh list" />
-      <Button fx:id="join" layoutX="571.0" layoutY="127.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="223.0" text="Join game" />
-      <Button fx:id="create" layoutX="571.0" layoutY="186.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="223.0" text="Create game" />
+      <Button fx:id="join" layoutX="571.0" layoutY="127.0" mnemonicParsing="false" onAction="#joinGame" prefHeight="35.0" prefWidth="223.0" text="Join game" />
+      <Button fx:id="create" layoutX="571.0" layoutY="186.0" mnemonicParsing="false" onAction="#createGame" prefHeight="35.0" prefWidth="223.0" text="Create game" />
+      <Text fx:id="errorMessage" fill="RED" layoutX="571.0" layoutY="267.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" visible="false" wrappingWidth="223.0" />
    </children>
 </AnchorPane>
