--- a/src/main/resources/fxml/newgame.fxml
+++ b/src/main/resources/fxml/newgame.fxml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.gui.controllers.initial.newGameController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.gui.controllers.initial.newGameController">
    <children>
       <ChoiceBox fx:id="numberChoiceBox" layoutX="225.0" layoutY="99.0" prefWidth="150.0" />
       <Label alignment="CENTER" layoutY="58.0" prefHeight="17.0" prefWidth="600.0" text="Select the number of players">
@@ -30,7 +27,12 @@
             <Font size="14.0" />
          </font>
       </Label>
-      <Button layoutX="248.0" layoutY="311.0" mnemonicParsing="false" onAction="#createGame" text="Create Game">
+      <Button defaultButton="true" layoutX="310.0" layoutY="311.0" mnemonicParsing="false" onAction="#createGame" prefHeight="30.0" prefWidth="131.0" text="Create Game">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Button>
+      <Button cancelButton="true" layoutX="160.0" layoutY="311.0" mnemonicParsing="false" onAction="#back" prefHeight="30.0" prefWidth="131.0" text="Back">
          <font>
             <Font size="16.0" />
          </font>
