--- a/src/main/resources/fxml/dashboard.fxml
+++ b/src/main/resources/fxml/dashboard.fxml
@@ -971,7 +971,27 @@
                <children>
                   <VBox layoutX="57.0" layoutY="137.0" prefHeight="1080.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
-                        <AnchorPane fx:id="characters" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS" />
+                        <AnchorPane fx:id="characters" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+                           <children>
+                              <HBox layoutX="102.0" layoutY="172.0" prefHeight="540.0" prefWidth="428.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                 <children>
+                                    <ScrollPane fx:id="characterPane1" prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
+                                      <content>
+                                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
+                                      </content>
+                                    </ScrollPane>
+                                    <ScrollPane fx:id="characterPane2" prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
+                                      <content>
+                                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
+                                      </content>
+                                    </ScrollPane>
+                                    <ScrollPane fx:id="characterPane3" prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
+                                      <content>
+                                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
+                                      </content>
+                                    </ScrollPane>
+                                 </children></HBox>
+                           </children></AnchorPane>
                         <Text fx:id="instruction" lineSpacing="4.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Other players are taking their turn, please wait" textAlignment="CENTER" wrappingWidth="428.0" VBox.vgrow="ALWAYS">
                            <font>
                               <Font size="22.0" />
