--- a/src/main/resources/fxml/movablestudents.fxml
+++ b/src/main/resources/fxml/movablestudents.fxml
@@ -32,26 +32,38 @@
             <Font size="16.0" />
          </font>
       </Text>
-      <ImageView fx:id="s3" fitHeight="85.0" fitWidth="110.0" layoutX="170.5" layoutY="326.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="s4" fitHeight="85.0" fitWidth="110.0" layoutX="170.5" layoutY="326.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../graphics/students/student_blue.png" />
          </image>
       </ImageView>
-      <Button fx:id="s3button" layoutX="189.0" layoutY="424.0" mnemonicParsing="false" onAction="#selectStudent3" text="Select" />
-      <Button fx:id="s4button" layoutX="69.0" layoutY="599.0" mnemonicParsing="false" onAction="#selectStudent4" text="Select" />
-      <Button fx:id="s5button" layoutX="188.0" layoutY="599.0" mnemonicParsing="false" onAction="#selectStudent5" text="Select" />
-      <Button fx:id="s6button" layoutX="307.0" layoutY="599.0" mnemonicParsing="false" onAction="#selectStudent6" text="Select" />
-      <ImageView fx:id="s4" fitHeight="85.0" fitWidth="110.0" layoutX="53.5" layoutY="498.0" pickOnBounds="true" preserveRatio="true">
+      <Button fx:id="s4button" layoutX="189.0" layoutY="424.0" mnemonicParsing="false" onAction="#selectStudent4" text="Select" />
+      <Button fx:id="s6button" layoutX="69.0" layoutY="599.0" mnemonicParsing="false" onAction="#selectStudent6" text="Select" />
+      <Button fx:id="s7button" layoutX="188.0" layoutY="599.0" mnemonicParsing="false" onAction="#selectStudent7" text="Select" />
+      <Button fx:id="s8button" layoutX="307.0" layoutY="599.0" mnemonicParsing="false" onAction="#selectStudent8" text="Select" />
+      <ImageView fx:id="s6" fitHeight="85.0" fitWidth="110.0" layoutX="53.5" layoutY="498.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../graphics/students/student_blue.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="s5" fitHeight="85.0" fitWidth="110.0" layoutX="170.5" layoutY="498.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="s7" fitHeight="85.0" fitWidth="110.0" layoutX="170.5" layoutY="498.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../graphics/students/student_blue.png" />
          </image>
       </ImageView>
-      <ImageView fx:id="s6" fitHeight="85.0" fitWidth="110.0" layoutX="289.5" layoutY="498.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="s8" fitHeight="85.0" fitWidth="110.0" layoutX="289.5" layoutY="498.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../graphics/students/student_blue.png" />
+         </image>
+      </ImageView>
+      <Button fx:id="s3button" layoutX="70.0" layoutY="424.0" mnemonicParsing="false" onAction="#selectStudent3" text="Select" />
+      <ImageView fx:id="s3" fitHeight="85.0" fitWidth="110.0" layoutX="53.5" layoutY="326.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../graphics/students/student_blue.png" />
+         </image>
+      </ImageView>
+      <Button fx:id="s5button" layoutX="308.0" layoutY="424.0" mnemonicParsing="false" onAction="#selectStudent5" text="Select" />
+      <ImageView fx:id="s5" fitHeight="85.0" fitWidth="110.0" layoutX="289.5" layoutY="326.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../graphics/students/student_blue.png" />
          </image>
