--- a/src/main/resources/fxml/dashboard.fxml
+++ b/src/main/resources/fxml/dashboard.fxml
@@ -449,7 +449,7 @@
                                           </Label>
                                           <Label fx:id="pinkIsl7" alignment="CENTER" layoutX="53.0" layoutY="479.0" prefHeight="23.0" prefWidth="29.0" text="0">
                                              <font>
-                                                <Font name="System Bold" size="20.0" />
+                                                <Font size="20.0" />
                                              </font>
                                           </Label>
                                           <Label fx:id="greenIsl7" alignment="CENTER" layoutX="116.0" layoutY="479.0" prefHeight="23.0" prefWidth="29.0" text="0">
@@ -937,12 +937,12 @@
                                                 <Image url="@../graphics/students/student_red.png" />
                                              </image>
                                           </ImageView>
-                                          <Label layoutX="18.0" layoutY="991.0" text="Players order for this turn: ">
+                                          <Label layoutX="18.0" layoutY="991.0" text="Players order for this turn:     ">
                                              <font>
                                                 <Font size="18.0" />
                                              </font>
                                           </Label>
-                                          <Label fx:id="playersList" layoutX="225.0" layoutY="991.0" text="Player 1, Player2.">
+                                          <Label fx:id="playersList" layoutX="232.0" layoutY="991.0" text="Player 1, Player2.">
                                              <font>
                                                 <Font size="18.0" />
                                              </font>
