--- a/src/main/resources/fxml/movablestudents.fxml
+++ b/src/main/resources/fxml/movablestudents.fxml
@@ -2,8 +2,6 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="426.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.gui.controllers.MovableStudentsController">
    <children>
@@ -16,5 +14,6 @@
       <Button fx:id="s8button" layoutX="295.5" layoutY="377.0" mnemonicParsing="false" onAction="#selectStudent8" prefHeight="55.0" prefWidth="75.0" />
       <Button fx:id="s3button" layoutX="55.5" layoutY="237.0" mnemonicParsing="false" onAction="#selectStudent3" prefHeight="55.0" prefWidth="75.0" />
       <Button fx:id="s5button" layoutX="295.5" layoutY="237.0" mnemonicParsing="false" onAction="#selectStudent5" prefHeight="55.0" prefWidth="75.0" />
+      <Button fx:id="buttonStop" layoutX="369.0" layoutY="461.0" mnemonicParsing="false" onAction="#selectStop" text="Stop" visible="false" />
    </children>
 </AnchorPane>
