--- a/src/main/resources/fxml/schoolboard.fxml
+++ b/src/main/resources/fxml/schoolboard.fxml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="996.0" prefWidth="1492.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.gui.controllers.SchoolboardController">
+<AnchorPane prefHeight="996.0" prefWidth="1492.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polimi.ingsw.client.gui.controllers.SchoolboardController">
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
         <children>
             <ImageView fitHeight="615.0" fitWidth="1428.0" layoutX="37.0" layoutY="37.0" pickOnBounds="true" preserveRatio="true">
@@ -444,6 +447,16 @@
             <font>
                <Font size="32.0" />
             </font></Text>
+         <Text layoutX="1336.0" layoutY="548.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TEAM">
+            <font>
+               <Font size="16.0" />
+            </font>
+         </Text>
+         <Label fx:id="teamColor" layoutX="1333.0" layoutY="553.0" text="BLACK" textFill="#171717">
+            <font>
+               <Font size="16.0" />
+            </font>
+         </Label>
         </children>
     </AnchorPane>
     <Text fx:id="played1" layoutX="35.0" layoutY="692.0" strokeType="OUTSIDE" strokeWidth="0.0" text="user played this assistant" textAlignment="CENTER" wrappingWidth="130.0" />
