--- a/src/main/resources/fxml/dashboard.fxml
+++ b/src/main/resources/fxml/dashboard.fxml
@@ -20,12 +20,12 @@
             <AnchorPane prefWidth="1492.0" HBox.hgrow="ALWAYS">
                <children>
                   <TabPane fx:id="dashboard" nodeOrientation="LEFT_TO_RIGHT" prefHeight="1080.0" side="BOTTOM" style="-fx-background-color: #69bae9;" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                    <tabs>
-                      <Tab text="Islands">
-                        <content>
+                     <tabs>
+                        <Tab text="Islands">
+                           <content>
                               <ScrollPane fitToHeight="true" fitToWidth="true">
                                  <content>
-                                <AnchorPane style="-fx-background-color: #69bae9;">
+                                    <AnchorPane style="-fx-background-color: #69bae9;">
                                        <children>
                                           <ImageView fx:id="isl7" fitHeight="250.0" fitWidth="350.0" layoutX="5.0" layoutY="370.0" pickOnBounds="true" preserveRatio="true">
                                              <image>
@@ -961,34 +961,34 @@
                                     </AnchorPane>
                                  </content>
                               </ScrollPane>
-                        </content>
-                      </Tab>
-                    </tabs>
+                           </content>
+                        </Tab>
+                     </tabs>
                   </TabPane>
                </children>
             </AnchorPane>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
                <children>
-                  <VBox layoutX="57.0" layoutY="137.0" prefHeight="1080.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <VBox fx:id="vboxChar" layoutX="57.0" layoutY="137.0" prefHeight="1080.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
                         <AnchorPane fx:id="characters" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
                            <children>
                               <HBox layoutX="102.0" layoutY="172.0" prefHeight="540.0" prefWidth="428.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                  <children>
                                     <ScrollPane fx:id="characterPane1" prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
-                                      <content>
-                                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
-                                      </content>
+                                       <content>
+                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
+                                       </content>
                                     </ScrollPane>
                                     <ScrollPane fx:id="characterPane2" prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
-                                      <content>
-                                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
-                                      </content>
+                                       <content>
+                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
+                                       </content>
                                     </ScrollPane>
                                     <ScrollPane fx:id="characterPane3" prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
-                                      <content>
-                                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
-                                      </content>
+                                       <content>
+                                          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="200.0" />
+                                       </content>
                                     </ScrollPane>
                                  </children></HBox>
                            </children></AnchorPane>
